<resources>
    <string name="app_name">YAWA</string>
    <string name="service_name">YAWA Service</string>
    <string name="weather_description">Description</string>
    <string name="weather_humidity">Humidity</string>
    <string name="weather_main">Weather</string>
    <string name="weather_temp_current">Current Temperature</string>
    <string name="weather_temp_max">Maximum Temperature</string>
    <string name="weather_temp_min">Minimum Temperature</string>
    <string name="weather_wind_speed">Wind Speed</string>
    <string name="weather_pressure">pressure</string>
    <string name="weather_seaLevel">seaLevel</string>
    <string name="weather_groundLevel">groundLevel</string>
    <string name="weather_windDegree">windDegree</string>
    <string name="weather_last_update">Last Update</string>
    <string name="settings_setCity">Config City</string>
    <string name="settings_about">About</string>
    <string name="settings_location">Get for My Location</string>
    <string name="settings_settings">Settings</string>
    <string name="settings_forecast">Forecast</string>
    <string name="settings_refresh">Refresh</string>
    <string name="settings_temp_units_title">Temperature Units</string>
    <string name="settings_auto_refresh_title">Auto-Refresh</string>
    <string name="settings_auto_refresh_summary">Update the Weather Automatically</string>
    <string name="settings_refresh_rate_title">Refresh Rate</string>
    <string name="settings_only_wifi_title">Connection Type</string>
    <string name="settings_only_wifi_summary">Only updates weather automatically when Wifi is On</string>
    <string name="settings_notifications_enabled_title">Enable Notifications</string>
    <string name="settings_notifications_enabled_summary">Enable Notifications to your selected city</string>
    <string name="settings_notification_time_title">Notification Time</string>
    <string name="settings_notification_time_summary">Choose a time to your Notification</string>
    <string name="settings_notifications_separator">Notifications</string>
    <string name="settings_battery_separator">Battery Management</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="min_1">1 minute</string>
    <string name="min_2">2 minutes</string>
    <string name="min_5">5 minutes</string>
    <string name="min_10">10 minutes</string>
    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="min_60">1 hour</string>
    <string name="min_120">2 hours</string>
    <string name="min_3600">6 hours</string>
    <string name="settings_temp_units_short_title">Units</string>
    <string name="settings_refresh_rate_short_title">Rate</string>
    <string name="settings_forecastDays">Forcast Days</string>
    <string name="settings_select_number">Select a number</string>
    <string name="settings_min_battery_title">Battery Manager</string>
    <string name="settings_min_battery_dialog_title">Disable Auto. updates when battery level reach:</string>

    <!-- Credits activity -->
    <string name="message_on_exit">Press again to exit</string>
    <string name="group">Group 11</string>
    <string name="person1">Author: Claudio Prates </string>
    <string name="number1">Number: 40908  </string>
    <string name="person2">Author: Daniel Rosa </string>
    <string name="number2">Number: 40909 </string>
    <string name="person3">Author: Tiago Oliveira</string>
    <string name="number3">Number: 40842</string>
    <string name="credits">Credits</string>

    <!-- Actionbar -->
    <string name="actionbar_label_actions">Actions</string>
    <string name="actionbar_label_cities">My Cities</string>
    <string name="actionbar_item_edit">Edit Locations</string>
    <string name="actionbar_item_add">Add new Location</string>
    <string name="title_activity_edit_cities">EditCitiesActivity</string>
    <string name="edit_cities_set">set city</string>
    <string name="edit_cities_remove">Remove city</string>
</resources>
