<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/weather_detail_fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtTitleCity" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_main"
        android:id="@+id/textView" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_height="match_parent"
            android:text="--"
            android:id="@+id/weatherMain"
            android:layout_weight="0.10"
            android:layout_width="100dp" />

        <ImageView
            android:id="@+id/imageViewWeatherState"
            android:layout_width="50dp"
            android:layout_height="50dp" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_description"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:id="@+id/weatherDescription" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:text="@string/weather_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <TextView
        android:text="--"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weatherhumidity" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:text="@string/weather_temp_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_temp_label" />

    <TextView
        android:text="--"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weatherTempCurrent" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:text="@string/weather_temp_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11" />

    <TextView
        android:text="--"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weatherTempMax" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:text="@string/weather_temp_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13" />

    <TextView
        android:text="--"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weatherTempMin" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_last_update"
            android:id="@+id/lastUpdateLabel"
            android:layout_gravity="end"
            android:textSize="10sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:id="@+id/lastUpdateTextView"
            android:layout_gravity="end"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>