<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/weather_detail_fragment">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/coord_weather_swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/coordScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:fillViewport="true" >

            <LinearLayout
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Waiting for Service..."
                    android:id="@+id/txtGPSTitle"
                    android:layout_gravity="center_horizontal" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_main" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="383dp"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <TextView
                        android:layout_height="match_parent"
                        android:text="--"
                        android:id="@+id/GPSWeatherMain"
                        android:layout_weight="0.10"
                        android:layout_width="100dp" />

                    <ImageView
                        android:id="@+id/GPSImageViewWeatherState"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:id="@+id/GPSWeatherDescription" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <TextView
                    android:text="@string/weather_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="--"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/GPSWeatherhumidity" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <TextView
                    android:text="@string/weather_temp_current"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="--"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/GPSWeatherTempCurrent" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <TextView
                    android:text="@string/weather_temp_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="--"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/GPSWeatherTempMax" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <TextView
                    android:text="@string/weather_temp_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="--"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/GPSWeatherTempMin" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather_last_update"
                        android:layout_gravity="end"
                        android:textSize="10sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="--"
                        android:id="@+id/GPSLastUpdateTextView"
                        android:layout_gravity="end"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>